Fix: Bootstrap (3/4/5) integration with table-sm and the sorting icons for 1.12 - icons would overlap
https://datatables.net/forums/discussion/72787/bootstrap-5-and-datatables-1-12-0-sorting-icons-problem#latest

--- a/css/dataTables.bootstrap.scss
+++ b/css/dataTables.bootstrap.scss
@@ -162,13 +162,6 @@ table.dataTable.table-condensed {
 	> thead > tr > th {
 		padding-right: 20px;
 	}
-
-	.sorting:after,
-	.sorting_asc:after,
-	.sorting_desc:after {
-		top: 6px;
-		right: 6px;
-	}
 }
 
 // Frustratingly the border-collapse:collapse used by Bootstrap makes the column
